29-10-2025/public-api-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  namespace: public-namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-api
  template:
    metadata:
      labels:
        app: public-api
    spec:
      containers:
      - name: public-api
        image: kishorek003/public-api:latest   
        ports:
        - containerPort: 3000
