29-10-2025/public-api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-api
  namespace: public-namespace
spec:
  selector:
    app: public-api
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
